# win-apps-updater

./: .gitignore  Cargo.toml  README  README.md  build.rs  todo.txt
src/: app.rs  lib.rs  main.rs  models.rs  winget.rs
src/ui/: components.rs  icon.rs  mod.rs
tests/: integration_test.rs
