[package]
name = "win_apps_updater"
version = "1.0.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[build-dependencies]
winresource = "0.1"

[lib]
name = "win_apps_updater"
path = "src/lib.rs"

[[bin]]
name = "WinAppsUpdater"
path = "src/main.rs"
